--- a/bundles/pom.xml
+++ b/bundles/pom.xml
@@ -348,7 +348,8 @@
     <module>org.openhab.binding.wled</module>
     <module>org.openhab.binding.xmltv</module>
     <module>org.openhab.binding.xmppclient</module>
-    <module>org.openhab.binding.yamahareceiver</module>
+    <module>org.openhab.binding.yamahamusiccast</module>
+	<module>org.openhab.binding.yamahareceiver</module>
     <module>org.openhab.binding.yioremote</module>
     <module>org.openhab.binding.yeelight</module>
     <module>org.openhab.binding.zoneminder</module>
